light-themes (0.1.6.6~ppa4) lucid; urgency=low

  [Ambiance] 
  * New metacity buttons with all states 
  * Adding source files for buttons
  * Adding CSD enabled theme
  * Adding fix for Chromium
  * Changing button colors

 -- Kenneth Wimer <kwwii@ubuntu.com>  Fri, 07 May 2010 16:01:45 +0100

light-themes (0.1.6.6~ppa3) lucid; urgency=low

  * Ambiance/Radiance: Changing colours to match latest design, playing with new padding and border values 

 -- Kenneth Wimer <kwwii@ubuntu.com>  Wed, 05 May 2010 16:06:13 +0100

light-themes (0.1.6.6~ppa2) lucid; urgency=low

  * Ambiance/Radiance: Removing nautilus-sidebar definiton so that the nautilus side pane is white

 -- Kenneth Wimer <kwwii@ubuntu.com>  Tue, 04 May 2010 09:38:04 +0100

light-themes (0.1.6.6~ppa1) lucid; urgency=low

  * Ambiance/Radiance: Change evolution hyperlinks to blue and visited to orange
   - Add nautilus-handle size = 2
  * Ambiance: Metacity add close_prelight icon (Thanks to vish) (LP: #565255).
   - Metacity adjust close prelight alpha = .8 

 -- James Schriver <jws141@gmail.com>  Thu, 22 Apr 2010 08:57:01 -0400

light-themes (0.1.6.5) lucid; urgency=low

  * Fixing incorrect gconf settings for button layout
  * Radiance: Sync link color with Ambiance 

 -- Kenneth Wimer <kwwii@ubuntu.com>  Thu, 15 Apr 2010 16:09:03 +0100

light-themes (0.1.6.4) lucid; urgency=low

  * Changing link color to fix LP: #549760 
  [James Schriver]
  * Ambiance: Adjust sublety of metacity icons prelight 
   - Colorize close icon prelight for added glow and pronounced prelight 
  * Ambiance/Radiance:  Adjust scrollbar lighting (LP: #542686).
   - Remove progressbar lightbordershade (LP: #551107).
   - Global trough_shades for scrollbar/progressbar

 -- Kenneth Wimer <kwwii@ubuntu.com>  Wed, 14 Apr 2010 15:45:29 +0100

light-themes (0.1.6.3) lucid; urgency=low

  * Changing button order and adding new buttons 
  * Fixing error in Radiance mouseOver effect
