@@ -3,10 +3,10 @@
 # Authors:
 # Kenneth Wimer <kwwii@ubuntu.com>
 # James Schriver <jws141@gmail.com>
-#
+# fcfbfa #e6e2df
 # Feel free to modify and share!
 
-gtk_color_scheme = "fg_color:#3c3b37\nbg_color:#fcfbfa\nbase_color:#ffffff\ntext_color:#3a3935\nselected_bg_color:#c6b9a6\nselected_fg_color:#323232\ntooltip_bg_color:#000\ntooltip_fg_color:#FFFFFF\nlink_color:#DD4814\nbutton_bg_color:#e6e6e6\nframe_color:#3c3b37\ninactive_frame_color:#3c3b37"
+gtk_color_scheme = "fg_color:#3c3b37\nbg_color:#f0f0f0\nbase_color:#ffffff\ntext_color:#3a3935\nselected_bg_color:#b5b3b1\nselected_fg_color:#323232\ntooltip_bg_color:#000\ntooltip_fg_color:#FFFFFF\nlink_color:#DD4814\nbutton_bg_color:#e6e6e6\nframe_color:#3c3b37\ninactive_frame_color:#3c3b37"
 
 gtk-icon-sizes = "panel-menu=22,22:gtk-button=16,16"
 
@@ -403,16 +403,18 @@ style "scale"
 	engine "murrine"
 	{
 		contrast		= 1.0
+		handlestyle         = 1
 		glazestyle          	= 0     # 0 = flat, 1 = curved, 2 = concave, 3 = top-curved, 4 = beryl
 		glow_shade          	= 1.14   # sets glow amount for buttons or widgets
 		glowstyle           	= 0     # 0 = top, 1 = bottom, 2 = top and bottom, 3 = center (vertical), 4 = center (horizontal) 
-		highlight_shade     	= 1.02  # set highlight amount for buttons or widgets
+		highlight_shade     	= 1.12  # set highlight amount for buttons or widgets
 		roundness		= 6
 	}
 
 	bg[NORMAL]	= shade (1.0, @bg_color)
-	bg[PRELIGHT] 	= shade (1.1, @bg_color)
+	bg[PRELIGHT] 	= shade (1.06, @bg_color)
 	bg[SELECTED] 	= "#FE765E"
+
 }
 
 style "hscale"
@@ -423,7 +425,7 @@ style "vscale"
 {
 }
 
-style "scrollbar"
+style "scrollbar" = "default"
 {
 	engine "murrine"
 	{
@@ -431,9 +433,9 @@ style "scrollbar"
 		border_colors       	= { @bg_color, @bg_color }
 		contrast		= .6 
 		glazestyle          	= 0     # 0 = flat, 1 = curved, 2 = concave, 3 = top-curved, 4 = beryl
-		glow_shade          	= 1.14   # sets glow amount for buttons or widgets
+		glow_shade          	= 1.09   # sets glow amount for buttons or widgets
 		glowstyle           	= 0     # 0 = top, 1 = bottom, 2 = top and bottom, 3 = center (vertical), 4 = center (horizontal) 
-		highlight_shade     	= 1.02  # set highlight amount for buttons or widgets
+		highlight_shade     	= 1.12  # set highlight amount for buttons or widgets
 		lightborder_shade   	= 1.2   # sets lightborder amount for buttons or widgets
 		roundness		= 8
 	}
